--- a/style.scss
+++ b/style.scss
@@ -1,24 +1,42 @@
-.dash-segment:not(.dash-segment-award) .segment-content {
+$dim-bg: hsl(0, 0%, 97%);
+$segment-shadow: rgba(0,0,0,0.2);
+$other-shadow: rgba(0,0,0,0.3);
+
+.dash-segment:not(.dash-segment-award) [class="segment-content"] {
     border-radius: 3px;
     padding: 15px;
-    box-shadow: 2px 4px 5px rgba(0,0,0,0.2);
-    background-color: hsl(0, 0%, 97%);
+    box-shadow: 2px 4px 5px $segment-shadow;
+    background-color: $dim-bg;
     transition: all 0.5s;
 
     &:hover {
-        box-shadow: 2px 4px 5px rgba(0,0,0,0.4);
-        background-color: hsl(0, 0%, 100%);
+        box-shadow: 2px 4px 5px opacify($segment-shadow, 0.2);
+        background-color: lighten($dim-bg, 5%);
     }
 }
 
 a.friend_man {
     border-radius: 1px;
-    box-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+    box-shadow: 1px 1px 3px $other-shadow;
     transition: box-shadow 0.5s;
 
     &:hover {
         border-radius: 1px;
-        box-shadow: 1px 1px 3px rgba(0,0,0,0.4);
+        box-shadow: 1px 1px 3px opacify($other-shadow, 0.2);
+    }
+}
+
+.friend_holder {
+    li {
+        a img {
+            border-radius: 50%;
+            box-shadow: 1px 1px 3px $other-shadow;
+            transition: box-shadow 0.5s;
+
+            &:hover {
+                box-shadow: 1px 1px 3px opacify($other-shadow, 0.2);
+            }
+        }
     }
 }
 
@@ -27,11 +45,11 @@ a.friend_man {
     text-transform: uppercase;
 }
 
-.plurk_cnt {
-    background-color: hsl(0, 0%, 95%);
+div.plurk_cnt {
+    background-color: $dim-bg;
     transition: background-color 0.5s;
 
     &:hover {
-        background-color: hsl(0, 0%, 100%);
+        background-color: lighten($dim-bg, 5%);
     }
 }
