--- a/style.scss
+++ b/style.scss
@@ -2,54 +2,5 @@ $dim-bg: hsl(0, 0%, 97%);
 $segment-shadow: rgba(0,0,0,0.2);
 $other-shadow: rgba(0,0,0,0.3);
 
-.dash-segment:not(.dash-segment-award) [class="segment-content"] {
-    border-radius: 3px;
-    padding: 15px;
-    box-shadow: 2px 4px 5px $segment-shadow;
-    background-color: $dim-bg;
-    transition: all 0.5s;
-
-    &:hover {
-        box-shadow: 2px 4px 5px opacify($segment-shadow, 0.2);
-        background-color: lighten($dim-bg, 5%);
-    }
-}
-
-a.friend_man {
-    border-radius: 1px;
-    box-shadow: 1px 1px 3px $other-shadow;
-    transition: box-shadow 0.5s;
-
-    &:hover {
-        border-radius: 1px;
-        box-shadow: 1px 1px 3px opacify($other-shadow, 0.2);
-    }
-}
-
-.friend_holder {
-    li {
-        a img {
-            border-radius: 50%;
-            box-shadow: 1px 1px 3px $other-shadow;
-            transition: box-shadow 0.5s;
-
-            &:hover {
-                box-shadow: 1px 1px 3px opacify($other-shadow, 0.2);
-            }
-        }
-    }
-}
-
-.display_name, h2 {
-    color: #36628B;
-    text-transform: uppercase;
-}
-
-div.plurk_cnt {
-    background-color: $dim-bg;
-    transition: background-color 0.5s;
-
-    &:hover {
-        background-color: lighten($dim-bg, 5%);
-    }
-}
+@import "./src/timeline";
+@import "./src/dashboard";
