--- a/src/_dashboard.scss
+++ b/src/_dashboard.scss
@@ -70,6 +70,7 @@
         img#profile_pic.profile-pic {
             margin: 30px inherit;
             border-radius: 50%;
+            filter: drop-shadow(2px 3px 3px $other-shadow);
         }
     }
 }
