--- a/src/_dashboard.scss
+++ b/src/_dashboard.scss
@@ -64,7 +64,7 @@
     /* Personal Profile */
     #dash-profile {
         .display_name {
-            color: #36628B;
+            color: $main-color;
         }
 
         img#profile_pic.profile-pic {
