--- a/src/_dashboard.scss
+++ b/src/_dashboard.scss
@@ -59,6 +59,10 @@
                 filter: brightness(1.3) drop-shadow(0 0 4px $other-shadow);
             }
         }
+
+        .link_arrow {
+            display: none;
+        }
     }
 
     /* Personal Profile */
