--- a/src/_dashboard.scss
+++ b/src/_dashboard.scss
@@ -8,7 +8,7 @@
             padding: 15px;
             box-shadow: 2px 4px 5px $segment-shadow;
             background-color: $dim-bg;
-            transition: all 0.3s ease-in-out;
+            transition: $transition;
 
             &:hover {
                 box-shadow: 2px 4px 5px opacify($segment-shadow, 0.2);
@@ -27,7 +27,7 @@
     a.friend_man {
         border-radius: 1px;
         box-shadow: 1px 1px 3px $other-shadow;
-        transition: box-shadow 0.5s;
+        transition: $transition;
 
         &:hover {
             border-radius: 1px;
@@ -41,7 +41,7 @@
             a img {
                 border-radius: 50%;
                 box-shadow: 1px 1px 3px $other-shadow;
-                transition: box-shadow 0.5s;
+                transition: $transition;
 
                 &:hover {
                     box-shadow: 1px 1px 3px opacify($other-shadow, 0.2);
@@ -53,7 +53,7 @@
     /* Badges */
     .dash-segment-award {
         img {
-            transition: filter 0.5s;
+            transition: $transition;
 
             &:hover {
                 filter: brightness(1.3) drop-shadow(0 0 4px $other-shadow);
