--- a/src/_timeline.scss
+++ b/src/_timeline.scss
@@ -10,12 +10,12 @@
         .plurk_cnt {
             border-radius: 5px;
             background-color: $dim-bg;
-            box-shadow: 2px 4px 5px $segment-shadow;
-            transition: all 0.3s ease-in-out;
+            box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+            transition: $transition;
 
             &:hover {
                 background-color: lighten($dim-bg, 5%);
-                box-shadow: 2px 4px 5px opacify($segment-shadow, 0.2);
+                box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
             }
 
             /* Pictures Preview*/
@@ -32,7 +32,7 @@
             /* Posts Buttons*/
             .manager {
                 opacity: 0.2;
-                transition: opacity 0.2s ease-out;
+                transition: $transition;
 
                 &:hover {
                     opacity: 1;
@@ -48,8 +48,13 @@
     }
 }
 
-.response_box {
-    .plurk {
-        border-left: solid 2px lighten($main-color, 20%);
+#form_holder {
+    box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+    
+    .response_box {
+        .plurk {
+            border-left: solid 2px lighten($main-color, 20%);
+        }
     }
 }
+
