--- a/src/main.scss
+++ b/src/main.scss
@@ -1,7 +1,8 @@
 $main-color: #36628B;
 $dim-bg: hsl(0, 0%, 97%);
-$segment-shadow: rgba(0,0,0,0.2);
-$other-shadow: rgba(0,0,0,0.3);
+$segment-shadow: rgba(0,0,0,0.16);
+$other-shadow: rgba(0,0,0,0.19);
+$transition: all 0.3s cubic-bezier(.25,.8,.25,1);
 
 @import "./src/global";
 @import "./src/timeline";
