--- a/src/_timeline.scss
+++ b/src/_timeline.scss
@@ -53,7 +53,13 @@
     
     .response_box {
         .plurk {
+            // Vertical lines in the beginning of the replys
             border-left: solid 2px lighten($main-color, 20%);
+        }
+        
+        // "Likes & Replurks" counting badge
+        div[class$="_count"] {
+            @include badge($other-shadow)
         }
     }
 }
