--- a/src/main.scss
+++ b/src/main.scss
@@ -4,11 +4,11 @@ $segment-shadow: rgba(0,0,0,0.16);
 $other-shadow: rgba(0,0,0,0.19);
 $transition: all 0.3s cubic-bezier(.25,.8,.25,1);
 
-@mixin badge($shadow-color, $transition-enabled: "true") {
+@mixin badge($shadow-color, $transition-enabled: true) {
     border-radius: 1px;
     box-shadow: 1px 1px 3px $shadow-color;
 
-    @if $transition-enabled == "true" {
+    @if $transition-enabled {
         transition: $transition;
         &:hover {
             border-radius: 1px;
