--- a/src/main.scss
+++ b/src/main.scss
@@ -4,7 +4,7 @@ $segment-shadow: rgba(0,0,0,0.16);
 $other-shadow: rgba(0,0,0,0.19);
 $transition: all 0.3s cubic-bezier(.25,.8,.25,1);
 
-@mixin badge($shadow-color, $transition-enabled: true) {
+@mixin block($shadow-color, $transition-enabled: true) {
     border-radius: 1px;
     box-shadow: 1px 1px 3px $shadow-color;
 
