--- a/src/_timeline.scss
+++ b/src/_timeline.scss
@@ -45,12 +45,17 @@
             }
         }
 
-
+        opacity: 0.9;
+        
     }
 
     .plurk.display.plurk_box {
         width: 230%;
     }
+
+    background-image: url("https://raw.githubusercontent.com/LineageOS/android_packages_apps_CMWallpapers/cm-14.1/res/drawable-xxhdpi/iconoclast.png");
+    background-size: contain;
+    background-position: left top;
 }
 
 #form_holder {
