Bigger posts padding for more comfortable view Ow0)

--- a/src/_timeline.scss
+++ b/src/_timeline.scss
@@ -8,6 +8,7 @@
 
         /* Posts Box */
         .plurk_cnt {
+            padding: 5px 3px;
             border-radius: 5px;
             background-color: $dim-bg;
             box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
